좋아요 추가, 삭제, 조회